--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ tagline: Unity Csharp Developer
 description: >-                        # used by seo meta and the atom feed
   Unity Csharp Developer
 
-url: 'https://rito16.github.io'
-baseurl: 'Portfolio'
+url: 'https://rito26.github.io'
+baseurl: ''
 
 author: Rito15 
 
