--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ tagline: Unity Csharp Developer
 description: >-                        # used by seo meta and the atom feed
   Unity Csharp Developer
 
-url: 'https://rito26.github.io'
+url: 'https://rito26.github.io/Portfolio'
 baseurl: ''
 
 author: Rito15 
