--- a/_config.yml
+++ b/_config.yml
@@ -179,6 +179,10 @@ exclude:
   - docs
   - README.md
   - LICENSE
+  - _posts_data
+  - _posts_templates
+  - _posts_TODO
+  - _MEMO
 
 jekyll-archives:
   enabled: [categories, tags]
