--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: >-                        # used by seo meta and the atom feed
   Unity Csharp Developer
 
 url: 'https://rito26.github.io'
-baseurl: '/Portfolio'
+baseurl: '/Archive'
 
 author: Rito15 
 
