--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Ruby
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 3 # 2.7 -> 3
+          ruby-version: 2.7 # 2.7 -> 3 ?
 
       - name: Bundle Caching
         uses: actions/cache@v2
